--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Roboto, sans-serif;
   .form {
     display: flex;
     flex-direction: column;
@@ -13,6 +14,8 @@
 
     input {
       text-transform: uppercase;
+      outline: none;
+      border-color: #000000;
     }
 
     div {
@@ -24,6 +27,11 @@
     button {
       width: 100px;
       align-self: center;
+      border: 2px solid black;
+      padding: 10px;
+      background-color: #00FF9C;
+      color: #000000;
+      font-weight: bold;
     }
   }
 
