--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,5 @@
 $primary-color: #282C69;
-$secondary-color: #FFFFFF;
+$secondary-color: #FAFAFA;
 $tertiary-color: #E52E31;
 
 .main {
@@ -9,41 +9,33 @@ $tertiary-color: #E52E31;
   align-items: center;
   font-family: Roboto, sans-serif;
 
+  h1 {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+
   .logo {
     width: 200px;
     margin-top: 30px;
   }
 
   .form {
-    border: 2px solid black;
     padding: 50px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     gap: 20px;
     max-width: 300px;
-    text-transform: uppercase;
-
-    input {
-      text-transform: uppercase;
-      outline: none;
-      border-color: #000000;
-    }
-
-    div {
-      display: flex;
-      flex-direction: column;
-
-    }
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
     button {
       width: 100px;
       align-self: center;
-      border: 2px solid black;
+      border: none;
       padding: 10px;
       background-color: $primary-color;
       color: $secondary-color;
-      font-weight: bold;
+      font-weight: normal;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
   }
 
@@ -51,26 +43,21 @@ $tertiary-color: #E52E31;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid black;
-    padding: 20px;
+    padding: 30px;
     margin: 25px 10px;
     box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    gap: 30px;
 
     h2 {
       text-align: center;
+      margin: 0;
     }
 
-    div {
-      width: 100%;
-    }
-
-    .breakdownItem {
-      background-color: $primary-color;
-      color: $secondary-color;
-      text-align: center;
-      border: 1px solid black;
-      padding: 5px;
-      font-weight: bold;
+    .breakdownsItems {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
 
     .downloadCsv {
@@ -78,6 +65,7 @@ $tertiary-color: #E52E31;
       color: $secondary-color;
       border: none;
       padding: 10px;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
       &:disabled {
         background-color: gray;
@@ -88,7 +76,7 @@ $tertiary-color: #E52E31;
 
 .credits {
   text-align: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin-bottom: 25px;
 
   a {
